<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/pages"
        android:checkableBehavior="single">

        <item
            android:id="@+id/boards"
            android:checkable="true"
            android:icon="@drawable/ic_menu"
            android:title="@string/navigation_drawer_boards_title"/>

        <item
            android:id="@+id/settings"
            android:checkable="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_drawer_settings_title" />
    </group>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:checkable="false"
        android:title="@string/navigation_drawer_logout_title" />

</menu>